--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-ui-lib": "^7.6.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
   },
