Fonts and Theme

--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
     "web": {
       "bundler": "metro",
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "assets": [
+      "assets/fonts"
+    ]
   }
 }
