--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "~18.2.14",
     "@types/tinycolor2": "^1.4.3",
     "expo": "^49.0.5",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "metro-core": "^0.77.0",
     "react": "18.2.0",
@@ -26,7 +27,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-ui-lib": "^7.6.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
