--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "@types/tinycolor2": "^1.4.3",
     "expo": "^49.0.5",
     "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "metro-core": "^0.77.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-ui-lib": "^7.6.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-splash-screen": "~0.20.5",
-    "react-native-svg": "13.9.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
