--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
     "@types/tinycolor2": "^1.4.3",
+    "babel-plugin-inline-import": "^3.0.0",
     "expo": "^49.0.6",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "link": "^1.5.1",
     "metro-core": "^0.77.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
+    "react-native-canvas": "^0.1.39",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
