--- a/package.json
+++ b/package.json
@@ -24,19 +24,21 @@
     "metro-core": "^0.77.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.5",
     "react-native-canvas": "^0.1.39",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-gradients": "^2.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
