--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@openspacelabs/react-native-zoomable-view": "^2.1.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/react": "~18.2.14",
     "@types/tinycolor2": "^1.4.3",
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "^49.0.6",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "link": "^1.5.1",
@@ -37,8 +39,9 @@
     "react-native-svg-transformer": "^1.1.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
-    "typescript": "^5.1.3",
-    "expo-linear-gradient": "~12.3.0"
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
