--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "expo": "^49.0.6",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
-    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "link": "^1.5.1",
+    "lottie-react-native": "^6.4.0",
     "metro-core": "^0.77.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
