--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "link": "^1.5.1",
-    "lottie-react-native": "^6.4.0",
+    "lottie-react-native": "5.1.6",
     "metro-core": "^0.77.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-canvas": "^0.1.39",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gradients": "^2.0.1",
