improvement of algorithm

--- a/app.json
+++ b/app.json
@@ -34,6 +34,7 @@
       "eas": {
         "projectId": "5852890e-a996-48a5-bc9a-f180bb92f378"
       }
-    }
+    },
+    "owner": "inveni"
   }
 }
